Добавил упоминание о GitHub

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <img src="images/my-foto.png" alt="Мое фото" class="photo">
         <h1>Привет, я Кодинец Геннадий!</h1>
         <p>Я изучаю программирование и VS Code</p>
+        <p>Мой первый проект на GitHub!</p>
         <div class="skills">
             <h2>Что я уже умею:</h2>
             <ul>
